# dna-sequence-visualizer

backend/: needleman_wunsch.py  pyproject.toml  server.py
